<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtYears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtTitle"
        android:inputType="number"
        android:textSize="25sp"
        android:hint="@string/hint1"
         />

    <EditText
        android:id="@+id/txtLoan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/txtYears"
        android:layout_centerHorizontal="true"
        android:inputType="number"
        android:textSize="25sp"
        android:hint="@string/hint2"/>


    <EditText
        android:id="@+id/txtInterest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/txtLoan"
        android:layout_centerHorizontal="true"
        android:inputType="number"
        android:textSize="25sp"
        android:hint="@string/hint3"/>


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtInterest"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        android:text="@string/bttnPayment"
         />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:srcCompat="@drawable/opening"
        android:contentDescription="@string/imgDescription"
        android:layout_below="@id/button"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="32sp"
        android:text="@string/txtTitle" />
</RelativeLayout>